frame/support/test/tests/pallet_ui/hold_reason_non_enum.stderr
error: Invalid pallet::hold_reason, expected enum item
  --> tests/pallet_ui/hold_reason_non_enum.rs:10:2
   |
10 |     pub struct HoldReason;
   |     ^^^
